Release 4.20
	- add support for row formulas as right side of row queries (making it possible to compare one row to another)
	- add support for parsing Unix-style epoch timestamps (nanoseconds, milliseconds, or seconds)
	- add long description in setup.py for PyPi (from README.md)

2020-04-23 Release 4.19
	- allow selector for JSON data to be a JSON path as well as just a simple token
	- add --selector option to all command-line scripts
	- added toupper() and tolower() row functions
	- fixed bugs with date heuristics and with JSONpath parsing of non-strings
	- various code cleanup
	- add a generic Makefile to simplify common testing and git tasks

2020-03-16 Release 4.18
	- add ImplodeFilter and implode() method to convert a long dataset into a wide dataset
	- add hxlexplode and hxlimplode command-line scripts
	- change hxl.model.Column.parse to return None for an empty string, or False for a malformed one
	- add logging for malformed tagspecs
	- extend column-rename spec to allow filtering by header as well as tag pattern

2020-02-25 Release 4.17
	- add ability to flatten lists as non-JSON (just separated by " | ")

2019-12-09 Release 4.16
	- added optional encoding parameter to hxl.io.data() etc. to force a character encoding
	- fix bug opening an Excel file when the server sends a
	  content-type: zip MIME type
	- fix bug peeking at UTF-8 files with many extended characters
	- fix minor stability issues (e.g. unclosed file resources)
	- fix CSV delimiter detection to ensure "," is always tried first

2019-04-04 Release 4.15.1
	- better error report when trying to open a zip file that's not an
	  XLSX or zipped CSV

2019-03-29 Release 4.15
	- improve support for private datasets: fix custom HTTP headers
	  with CKAN URL munging; add HXL_HTTP_HEADER and --http-header
	  support for all scripts
	- add hxl.io.HXLIOException as base class for all HXL I/O-related
	  exceptions, with an optional url property