@@ -1,5 +1,6 @@
 Release 4.20
 	- add support for row formulas as right side of row queries (making it possible to compare one row to another)
+	- add today() function for row formulas (today's UTC date in ISO YYYY-mm-dd format)
 	- add support for parsing Unix-style epoch timestamps (nanoseconds, milliseconds, or seconds)
 	- add long description in setup.py for PyPi (from README.md)
 
